# Forage

./: .gitignore  AGENT.md  README.md  TODOS.md  durable_object_workflow_prompt.md  pyproject.toml  secrets_template.json
docs/: SPEC.md
plans/: forage-deepseek-v32-openrouter-update.md
src/forage/providers/: kimi.py
src/grove_domain_search/: __init__.py  cli.py
src/grove_domain_tool/: cli.py  config.py  pricing.py
src/grove_domain_tool/providers/: __init__.py
tests/: __init__.py  test_agents.py  test_orchestrator.py  test_providers.py  test_quiz.py
worker/: AUTH_MIGRATION.md  package-lock.json  package.json  pnpm-lock.yaml  wrangler.toml
worker/src/: auth.ts  durable-object.ts  index.ts  job-index.ts  pricing.ts  rdap.ts  types.ts
worker/src/agents/: swarm.ts
worker/src/providers/: index.ts
